--- a/frontend-backend/public/index.html
+++ b/frontend-backend/public/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LinkENERGIÉ - Construction Project Management System</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div id="app"></div>
+    <script src="app.js"></script>
 </body>
 </html>
